# alxscrpr

./: README.md  pyproject.toml
alxscrpr/: main.py
tests/: test_alxscrpr.py
